Moved the application properties out of the templates and into the resources folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
 
-application.properties
+src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
@@ -24,3 +24,4 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+src/main/java/com/simplesauce/svcs/
